# caffe

examples/: 00-classification.ipynb  CMakeLists.txt  quang-age-gender-test.ipynb
examples/age_gender/: CMakeLists.txt  main.cpp
